--- a/index.html
+++ b/index.html
@@ -10,10 +10,18 @@
 <body>
 	<div>
 		<p>Title of our web application: CoursePlanner</p>
-		<p>Description: Using this application, we hope to emulate and improve many aspects shown in the exising ConnectCarolina system. This includes the viewing of avaliable classes, adding these classes into a shopping cart, viewing previous class history, and viewing course requirements for graduation in a desired major.</p>
+		<p>Description: Using this application, we hope to emulate and improve many aspects shown in the exising ConnectCarolina system. This includes the viewing of avaliable classes and adding these classes into a shopping cart.</p>
+		<p>Things we achieved:</p>
+		- Dynamically changing DOM in response to user interaction
+		<br>- Appropriate use of CSS for controlling layout and appearance
+		<br>- Dynamically changing CSS applied to elements in response to user interaction
+		<br>- Use of a RESTful interface to multiple back-end resources
+		<br>- Retrival of new information using AJAX
+		<br>- Memorializing changes to a resource on the back-end as a result of user-interaction
+		<br>- Creating a new resource instance on the back-end as a result of user interaction
 		<p>Team Members: Kevin Guo: 720050250, T. J. Tkacik: 720074165</p>
 		<p>Our mockup page: <a href="http://wwwp.cs.unc.edu/Courses/comp426-f13/tkacik/project/mockup.html">Mockup</a></p>
-		<p>Our design sketches: <a href="photo1.jpg">Sketch 1</a> <a href="photo2.jpg">Sketch 2</a> <a href="photo3.jpg">Sketch 3</a></p>
+		<p>Our design sketches: <a href="photo1.jpg">Sketch 1</a> <a href="photo2.jpg">Sketch 2</a> <a href="photo3.jpg">Sketch 3</a> <a href="https://docs.google.com/spreadsheet/ccc?key=0AjRddUvxgM7PdGExZXRqZ1BRbHlrVFVReDVPSlRHLVE&usp=sharing">RESTful Interface GDoc</a> <a href="https://docs.google.com/document/d/1Tt4BSnVgdx7e8u--u57f5InAVT-cmgT8I8yIZLJvlTY/edit?usp=sharing">DB Schema</a></p>
 		<p>Additional Notes: We will be using GitHub for version control</p>
 	</div>
  </body>
